<resources>
    <string name="app_name">IMC</string>
    <string name="male">Hombre</string>
    <string name="ic_male">Male icon</string>
    <string name="female">Mujer</string>
    <string name="ic_female">Female icon</string>
    <string name="height">Altura</string>
    <string name="height_value">120 CM</string>
    <string name="weight_value">60</string>
    <string name="age_value">30</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate_button">Calcular</string>
    <string name="centimeters">CM</string>

    <!-- Instructions -->
    <string name="app_tittle">Calculadora IMC</string>

    <!-- Result Activity -->
    <string name="your_result">Tu resultado:</string>
    <string name="Re_calculate">RE-CALCULAR</string>
    <string name="underweight">Insuficiente</string>
    <string name="normal_weight">Normal</string>
    <string name="overweight">Sobrepeso</string>
    <string name="obese">Obesidad</string>
    <string name="error">Error</string>

    <string name="underweight_des">Usted se encuentra dentro del rango de peso insuficiente.</string>
    <string name="normal_des">Usted se encuentra dentro del rango de peso normal.</string>
    <string name="overeight_des">Usted se encuentra dentro del rango de sobrepeso.</string>
    <string name="obese_des">Usted se encuentra dentro del rango de obesidad.</string>
    <string name="error_des">Parece que estás fuera de los límites…</string>

    <!-- Content description -->
    <string name="plus_button">Botón restar</string>
    <string name="minus_button">Botón sumar</string>
    <string name="emoji_image">Emoji image</string>
</resources>