<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="23dp"
    android:paddingVertical="30dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/result_txt"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:text="@string/your_result"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/card_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/poppinsbold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/component"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/recal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_txt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Vector -->
            <ImageView
                android:id="@+id/emoji"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                tools:src="@drawable/ic_normal"
                android:contentDescription="@string/emoji_image"/>

            <!-- Result -->
            <TextView
                android:id="@+id/status_result"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:textSize="50sp"
                tools:text="@string/obese"
                android:fontFamily="@font/poppinsregular"/>

            <!-- Number Result -->
            <TextView
                android:id="@+id/number_result"
                android:layout_width="wrap_content"
                android:layout_height="109dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:textSize="80sp"
                android:textStyle="bold"
                tools:text="23"
                android:fontFamily="@font/poppinsregular"
                />

            <!-- Result description -->
            <TextView
                android:id="@+id/description_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="80dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="23sp"
                tools:text="Estado óptimo para peso y altura"
                android:fontFamily="@font/poppinsregular"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/recal_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button"
        android:text="@string/Re_calculate"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_result"
        tools:ignore="VisualLintButtonSize"
        android:fontFamily="@font/poppinsbold"
        android:elegantTextHeight="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>